--- a/salon.html
+++ b/salon.html
@@ -5,8 +5,17 @@
 <html>
 
 <div class="center">
-    <a href="#" class="myButton">PROGRAMEAZA-TE</a>
+    <button id="myButton" href="#" class="myButton">
+        <a>PROGRAMEAZA-TE</a>
+        <script type="text/javascript">
+            document.getElementById("myButton").onclick = function () {
+                location.href = "https://menandwomenstudio.appointlet.com/";
+            };
+        </script>
+    </button>
 </div>
+
+
 
 <head>
     <style type="text/css">
