Update to local base

--- a/salon.html
+++ b/salon.html
@@ -5,7 +5,7 @@
 <html>
 
 <div class="center">
-    <button id="myButton" href="#" class="myButton">
+    <button id="myButton" href="#" class="myButton button1">
         <a>PROGRAMEAZA-TE</a>
         <script type="text/javascript">
             document.getElementById("myButton").onclick = function () {
@@ -15,17 +15,20 @@
     </button>
 </div>
 
-
-
-<head>
+<div class="background">
     <style type="text/css">
         body {
-            background: url(cisco.png);
+            height: 100%;
+            width: 100%;
+            background: url(bg-telefon.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
+            background-size: contain;
         }
     </style>
-</head>
+</div>
+
+<body style="background-color: black;"></body>
 
 </html>
