--- a/salon.html
+++ b/salon.html
@@ -4,8 +4,8 @@
 </header>
 <html>
 
-<div class="center">
-    <button id="myButton" href="#" class="myButton button1">
+<div class="btn_programare center">
+    <button id="programre" href="#" class="myButton button1">
         <a>PROGRAMEAZA-TE</a>
         <script type="text/javascript">
             document.getElementById("myButton").onclick = function () {
@@ -15,12 +15,34 @@
     </button>
 </div>
 
+<div class="btn_social_media center2">
+    
+    <button id="facebook" class="social_media">
+        <input type="image" src="facebook.png" width="100%"/>
+        <script type="text/javascript">
+            document.getElementById("facebook").onclick = function () {
+                location.href = "https://www.facebook.com/";
+            };
+        </script>
+    </button>
+
+    <button id="instagram" class="social_media">
+        <input type="image" src="instagram.png" width="100%"/>
+        <script type="text/javascript">
+            document.getElementById("instagram").onclick = function () {
+                location.href = "https://www.instagram.com/";
+            };
+        </script>
+    </button>
+
+</div>
+
 <div class="background">
     <style type="text/css">
         body {
             height: 100%;
             width: 100%;
-            background: url(bg-telefon.jpg);
+            background: url(bg-telefon.png);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-position: center;
