--- a/salon.html
+++ b/salon.html
@@ -5,20 +5,9 @@
 <html>
 
 <div class="btn_programare center">
-    <button id="programre" href="#" class="myButton button1">
-        <a>PROGRAMEAZA-TE</a>
-        <script type="text/javascript">
-            document.getElementById("myButton").onclick = function () {
-                location.href = "https://menandwomenstudio.appointlet.com/";
-            };
-        </script>
-    </button>
-</div>
 
-<div class="btn_social_media center2">
-    
     <button id="facebook" class="social_media">
-        <input type="image" src="facebook.png" width="100%"/>
+        <input type="image" src="facebook.png" width="100%" />
         <script type="text/javascript">
             document.getElementById("facebook").onclick = function () {
                 location.href = "https://www.facebook.com/";
@@ -26,8 +15,17 @@
         </script>
     </button>
 
+    <button id="programare" href="#" class="myButton button1">
+        <a>PROGRAMEAZA-TE</a>
+        <script type="text/javascript">
+            document.getElementById("programare").onclick = function () {
+                location.href = "https://menandwomenstudio.appointlet.com/";
+            };
+        </script>
+    </button>
+
     <button id="instagram" class="social_media">
-        <input type="image" src="instagram.png" width="100%"/>
+        <input type="image" src="instagram.png" width="100%" />
         <script type="text/javascript">
             document.getElementById("instagram").onclick = function () {
                 location.href = "https://www.instagram.com/";
