Success same row

--- a/salon.html
+++ b/salon.html
@@ -6,32 +6,38 @@
 
 <div class="btn_programare center">
 
-    <button id="facebook" class="social_media">
-        <input type="image" src="facebook.png" width="100%" />
-        <script type="text/javascript">
-            document.getElementById("facebook").onclick = function () {
-                location.href = "https://www.facebook.com/";
-            };
-        </script>
-    </button>
+    <div class="inner">
+        <button id="facebook" class="social_media">
+            <input type="image" src="facebook.png" width="100%" />
+            <script type="text/javascript">
+                document.getElementById("facebook").onclick = function () {
+                    location.href = "https://www.facebook.com/";
+                };
+            </script>
+        </button>
+    </div>
 
-    <button id="programare" href="#" class="myButton button1">
-        <a>PROGRAMEAZA-TE</a>
-        <script type="text/javascript">
-            document.getElementById("programare").onclick = function () {
-                location.href = "https://menandwomenstudio.appointlet.com/";
-            };
-        </script>
-    </button>
+    <div class="inner">
+        <button id="programare" href="#" class="myButton button1">
+            <a>PROGRAMEAZA-TE</a>
+            <script type="text/javascript">
+                document.getElementById("programare").onclick = function () {
+                    location.href = "https://menandwomenstudio.appointlet.com/";
+                };
+            </script>
+        </button>
+    </div>
 
-    <button id="instagram" class="social_media">
-        <input type="image" src="instagram.png" width="100%" />
-        <script type="text/javascript">
-            document.getElementById("instagram").onclick = function () {
-                location.href = "https://www.instagram.com/";
-            };
-        </script>
-    </button>
+    <div class="inner">
+        <button id="instagram" class="social_media">
+            <input type="image" src="instagram.png" width="100%" />
+            <script type="text/javascript">
+                document.getElementById("instagram").onclick = function () {
+                    location.href = "https://www.instagram.com/";
+                };
+            </script>
+        </button>
+    </div>
 
 </div>
 
