Add custom font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 </header>
 <html>
 
+<head>
+    <style>
+        body {
+            font-family: Montserrat;
+            src: url(https://fonts.google.com/specimen/Montserrat);
+        }
+    </style>
+</head>
+
 
 <div class="btn_group block center">
     <div class="btn">
@@ -12,7 +21,7 @@
                 <input type="image" src="facebook.png" width="100%" />
                 <script type="text/javascript">
                     document.getElementById("facebook").onclick = function () {
-                        location.href = "https://www.facebook.com/";
+                        location.href = "https://www.facebook.com/MWS-110634744150676/";
                     };
                 </script>
             </button>
