--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="image" src="facebook.png" width="100%" />
                 <script type="text/javascript">
                     document.getElementById("facebook").onclick = function () {
-                        location.href = "https://www.facebook.com/MWS-110634744150676/";
+                        location.href = "https://bit.ly/34xBaz9";
                     };
                 </script>
             </button>
@@ -32,7 +32,7 @@
                 <a>PROGRAMEAZA-TE</a>
                 <script type="text/javascript">
                     document.getElementById("programare").onclick = function () {
-                        location.href = "https://menandwomenstudio.appointlet.com/";
+                        location.href = "https://bit.ly/3yQILa4";
                     };
                 </script>
             </button>
@@ -43,7 +43,7 @@
                 <input type="image" src="instagram.png" width="100%" />
                 <script type="text/javascript">
                     document.getElementById("instagram").onclick = function () {
-                        location.href = "https://www.instagram.com/";
+                        location.href = "https://bit.ly/3i6mUWk";
                     };
                 </script>
             </button>
