Retry push-to-call

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div itemscope itemtype="https://schema.org/LocalBusiness">
                     <button id="phone-call" class="social_media">
                         <input type="image" src="phone-call.png" width="100%" />
-                            <a href="tel:+40749202682">  </a>
+                            <a href="callto:+40749202682"></a>
                     </button>
                 </div>
 
