--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 
 
                 <div itemscope itemtype="https://schema.org/LocalBusiness">
-                    <button id="phone-call" class="social_media">
-                        <input type="image" src="phone-call.png" width="100%" />
-                            <a href="callto:+40749202682"></a>
-                    </button>
+                    <a href="callto:+40749202682">
+                        <button id="phone-call" class="social_media">
+                            <input type="image" src="phone-call.png" width="100%" />
+                        </button>
+                    </a>
                 </div>
 
                 <button id="instagram" class="social_media">
