Retry push-to-call

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
                 <div itemscope itemtype="https://schema.org/LocalBusiness">
-                    <a href="callto:+40749202682">
+                    <a href="tel:+40749202682">
                         <button id="phone-call" class="social_media">
                             <input type="image" src="phone-call.png" width="100%" />
                         </button>
